feat: Update package configuration and add OpenAI API server
- Changed the browser launch command in package.json to use Arc instead of Chrome.
- Added new scripts for example usage and server start.
- Updated dependencies including @hono/node-server and @hono/zod-openapi.
- Removed puppeteer.config.js as it is no longer needed.
- Introduced a new messages.ts file to build prompts for the AI.
- Enhanced eye.ts to synchronize accessibility memory with new methods for adding and deleting memories.
- Created openai-openapi.ts to define OpenAI API routes and schemas using Hono and Zod.
- Implemented server.ts to serve the OpenAI API.
- Added gemini.ts service to handle interactions with the Gemini application.
- Updated DOM utility functions to improve element selection and highlighting.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,21 @@
       ],
       "runtimeArgs": ["--inspect"],
       "console": "integratedTerminal"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug server.ts",
+      "skipFiles": ["<node_internals>/**"],
+      "program": "src/server/server.ts",
+      "runtimeExecutable": "tsx",
+      "sourceMaps": true,
+      "resolveSourceMapLocations": [
+        "${workspaceFolder}/**",
+        "!**/node_modules/**"
+      ],
+      "runtimeArgs": ["--inspect"],
+      "console": "integratedTerminal"
     }
   ]
 }
