--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "browser": "/Applications/Google\\ Chrome\\ Canary.app/Contents/MacOS/Google\\ Chrome\\ Canary --remote-debugging-port=9222 --user-data-dir=/tmp/chrome_debug > /dev/null 2>&1 &",
-    "eye": "npm run browser && sleep 3 && tsx src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "browser": "/Applications/Arc.app/Contents/MacOS/Arc --remote-debugging-port=9222 --enable-features=ClipboardRead --user-data-dir=/tmp/chrome_debug > /dev/null 2>&1 &",
+    "example:google": "MEM0_TELEMETRY=False tsx examples/google.ts",
+    "server": "MEM0_TELEMETRY=False tsx --watch src/server/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,8 @@
   "dependencies": {
     "@ai-sdk/google": "^1.2.1",
     "@ai-sdk/openai": "^1.2.5",
+    "@hono/node-server": "^1.15.0",
+    "@hono/zod-openapi": "^0.19.9",
     "@huggingface/transformers": "^3.4.0",
     "@openrouter/ai-sdk-provider": "^0.4.3",
     "@tensorflow/tfjs": "^4.22.0",
@@ -30,12 +32,16 @@
     "@tensorflow/tfjs-node-gpu": "^4.22.0",
     "@types/node": "^22.13.10",
     "ai": "^4.1.62",
+    "clipboardy": "^4.0.0",
     "es-toolkit": "^1.39.3",
     "html2canvas": "^1.4.1",
     "html2canvas-pro": "^1.5.8",
     "mem0ai": "^2.1.30",
     "optional": "^0.1.4",
     "sharp": "^0.33.5",
-    "zod": "^3.24.2"
+    "zod": "^3.25.76"
+  },
+  "volta": {
+    "node": "22.17.0"
   }
 }
