--- a/package.json
+++ b/package.json
@@ -31,21 +31,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@hono/node-server": "^1.15.0",
+    "@hono/zod-openapi": "^0.19.9",
     "@types/jsdom": "^21.1.7",
     "axe-core": "^4.10.3",
     "esbuild": "^0.25.1",
     "jsdom": "^26.0.0",
     "tsx": "^4.19.3",
-    "typescript": "^5.8.2",
-    "@hono/node-server": "^1.15.0",
-    "@hono/zod-openapi": "^0.19.9"
+    "typescript": "^5.8.2"
   },
   "dependencies": {
     "@types/node": "^22.13.10",
-    "puppeteer": "^24.10.0",
     "clipboardy": "^4.0.0",
     "es-toolkit": "^1.39.3",
-    "mem0ai": "^2.1.30",
+    "mem0ai": "^2.1.36",
+    "puppeteer": "^24.10.0",
     "zod": "^3.25.76"
   },
   "volta": {
