--- a/package.json
+++ b/package.json
@@ -1,31 +1,17 @@
 {
   "name": "aria-eye",
-  "version": "0.0.1-beta-2",
+  "version": "0.0.4",
   "description": "",
-  "type": "module",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/mjs/index.js",
-  "types": "./dist/types/index.d.ts",
+  "type": "commonjs",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    ".": {
-      "import": {
-        "types": "./dist/types/index.d.ts",
-        "default": "./dist/mjs/index.js"
-      },
-      "require": {
-        "types": "./dist/types/index.d.ts",
-        "default": "./dist/cjs/index.js"
-      }
-    }
+    ".": "./dist/index.js"
   },
   "scripts": {
     "clean": "rm -rf dist",
-    "build": "npm run clean && npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc -p tsconfig.esm.json",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "browser": "/Applications/Arc.app/Contents/MacOS/Arc --remote-debugging-port=9222 --enable-features=ClipboardRead --user-data-dir=/tmp/chrome_debug > /dev/null 2>&1 &",
-    "example:google": "MEM0_TELEMETRY=false tsx examples/google.ts",
-    "server": "MEM0_TELEMETRY=false tsx --watch src/server/server.ts"
+    "build": "npm run clean && tsup",
+    "browser": "/Applications/Arc.app/Contents/MacOS/Arc --remote-debugging-port=9222 --enable-features=ClipboardRead --user-data-dir=/tmp/chrome_debug > /dev/null 2>&1 &"
   },
   "keywords": [],
   "author": "",
@@ -35,8 +21,8 @@
     "@hono/zod-openapi": "^0.19.9",
     "@types/jsdom": "^21.1.7",
     "axe-core": "^4.10.3",
-    "esbuild": "^0.25.1",
     "jsdom": "^26.0.0",
+    "tsup": "^8.5.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   },
@@ -44,10 +30,16 @@
     "@types/node": "^22.13.10",
     "clipboardy": "^4.0.0",
     "es-toolkit": "^1.39.3",
-    "mem0ai": "^2.1.36",
+    "esbuild": "^0.25.6",
+    "mem0ai": "2.1.36",
     "puppeteer": "^24.10.0",
     "zod": "^3.25.76"
   },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "volta": {
     "node": "22.17.0"
   }
