fix: update package version to 0.0.4, refine browser script, and adjust memory configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "@isomorphic/*": ["./utils/isomorphic/*"]
     },
     "target": "ESNext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "typeRoots": ["src/types", "./node_modules/@types"],
     "types": ["global"],
     "esModuleInterop": true,
