--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "build": "npm run clean && tsup",
-    "browser": "/Applications/Arc.app/Contents/MacOS/Arc --remote-debugging-port=9222 --enable-features=ClipboardRead --user-data-dir=/tmp/chrome_debug > /dev/null 2>&1 &"
+    "browser": "/Applications/Google\\ Chrome\\ Canary.app/Contents/MacOS/Google\\ Chrome\\ Canary --remote-debugging-port=9222 --enable-features=ClipboardRead --user-data-dir=/tmp/chrome_debug > /dev/null 2>&1 &"
   },
   "keywords": [],
   "author": "",
@@ -29,7 +29,7 @@
   "dependencies": {
     "@types/node": "^22.13.10",
     "clipboardy": "^4.0.0",
-    "es-toolkit": "^1.39.3",
+    "es-toolkit": "^1.39.10",
     "esbuild": "^0.25.6",
     "mem0ai": "2.1.36",
     "puppeteer": "^24.10.0",
