--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aria-eye",
-  "version": "0.0.4",
+  "version": "0.0.5-beta.2",
   "description": "",
   "type": "commonjs",
   "main": "./dist/index.js",
@@ -21,6 +21,7 @@
     "@hono/zod-openapi": "^0.19.9",
     "@types/jsdom": "^21.1.7",
     "axe-core": "^4.10.3",
+    "esbuild": "^0.25.6",
     "jsdom": "^26.0.0",
     "tsup": "^8.5.0",
     "tsx": "^4.19.3",
@@ -30,7 +31,6 @@
     "@types/node": "^22.13.10",
     "clipboardy": "^4.0.0",
     "es-toolkit": "^1.39.10",
-    "esbuild": "^0.25.6",
     "mem0ai": "2.1.36",
     "puppeteer": "^24.10.0",
     "zod": "^3.25.76"
