--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aria-eye",
-  "version": "0.0.5-beta.2",
+  "version": "0.0.5-beta.10",
   "description": "",
   "type": "commonjs",
   "main": "./dist/index.js",
@@ -23,15 +23,16 @@
     "axe-core": "^4.10.3",
     "esbuild": "^0.25.6",
     "jsdom": "^26.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "tsup": "^8.5.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.2"
   },
   "dependencies": {
     "@types/node": "^22.13.10",
+    "@yaonyan/mem0ai": "^2.1.39-beta.patch-1",
     "clipboardy": "^4.0.0",
     "es-toolkit": "^1.39.10",
-    "mem0ai": "2.1.36",
     "puppeteer": "^24.10.0",
     "zod": "^3.25.76"
   },
