--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "@isomorphic/*": ["./utils/isomorphic/*"]
     },
     "target": "ESNext",
+    "module": "ESNext",
     "moduleResolution": "bundler",
     "typeRoots": ["src/types", "./node_modules/@types"],
     "types": ["global"],
